# tiny-viewer

./: .gitignore  CMakeLists.txt  TinyViewerConfig.cmake.in  config.cmake.in  readme.md
config/: config.json
data/: scan.pcd
output/: 1683794904023740133.view  1683795147461499635.cam
src/: CMakeLists.txt  main.cpp
src/include/tiny-viewer/: colour.hpp  pose.hpp  utils.hpp  viewer.h
src/include/tiny-viewer/core/: multi_viewer.h  pose.hpp  rendertree.h  shader.h  utils.hpp  viewer.h  viewer_configor.h
src/include/tiny-viewer/entity/: arrow.h  camera.h  circle.h  cone.h  coordinate.h  cube.h  cylinder.h  entity.h  imu.h  lidar.h  line.h  macro.hpp  path.h  point_cloud.h  point_cloud.hpp  polygon.h  surfel.h  util.h  utils.h
src/include/tiny-viewer/object/: aligned_cloud.hpp  camera.h  imu.h  landmark.h  lidar.h  plane.h  plane_in_cube.h  radar.h  surfel.h
src/src/: viewer.cpp
src/src/core/: multi_viewer.cpp  pose.cpp  viewer.cpp  viewer_configor.cpp
src/src/entity/: arrow.cpp  camera.cpp  circle.cpp  cone.cpp  coordinate.cpp  cube.cpp  cylinder.cpp  entity.cpp  imu.cpp  lidar.cpp  line.cpp  path.cpp  point_cloud.cpp  polygon.cpp  surfel.cpp  util.cpp
src/src/object/: camera.cpp  imu.cpp  landmark.cpp  lidar.cpp  plane.cpp  plane_in_cube.cpp  radar.cpp  surfel.cpp
